Update brand and influencer login and registration functionality